# Sistema

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  SimpleXLSXGen.php  apps.php  auth.php  cloudflare.php  cloudflare_helper.php  cloudflare_proxy.php  common.js  conexao.php  config.php  cron_verificar_apps.php  database_schema.sql  debug_badge_slack.php  debug_cf.php  debug_slack.php  docker-compose.yml  forcar_lote_slack.php  index.php  limpar_bug_slack.php  limpar_teste.php  login.php  migrar_ids.php  navbar.php  pessoas.php  processa.php  reconstruir_slack.php  relatorio.php  remover_teste.php  slack.php  tailwind.js  test_verify.php  verificar_config.php  verificar_log.php
backend/: api_atualizar.php  api_gerar.php  api_listar.php
excel exemplo/: Import_template.xlsx
implementação/slack-tracker-main/: .gitignore  Cargo.toml  README.md
implementação/slack-tracker-main/docs/: README.md  arquitetura.md  comandos.md  configuracao.md  instalacao.md  scheduler-e-servico.md  solucao-de-problemas.md
implementação/slack-tracker-main/src/: analyzer.rs  lists.rs  main.rs  slack.rs
sql/: descontos.sql  licencas.sql
