[package]
name = "slack-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
regex = "1.10"
dirs = "5.0"
log = "0.4"
env_logger = "0.11"
once_cell = "1.19"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
